tidied up notebooks a bunch

--- a/paper3/repo-paper-materials/R4-evaluation-transect.ipynb
+++ b/paper3/repo-paper-materials/R4-evaluation-transect.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Figure R4 (results)\n",
-    "### Transect of results and observations"
+    "### Transect of simulated and observed dissolved Pb concentrations"
    ]
   },
   {
@@ -21,14 +21,15 @@
     "import xarray as xr\n",
     "import pandas as pd \n",
     "import cmocean\n",
-    "import forcing.modules.mapping_functions as mf\n",
     "from matplotlib.ticker import (MultipleLocator, AutoMinorLocator)\n",
     "from datetime import datetime\n",
     "import matplotlib\n",
     "import glob\n",
     "from matplotlib.patches import Rectangle\n",
     "from matplotlib.collections import PatchCollection\n",
-    "from constants import imin, imax, jmin, jmax, isize, jsize\n",
+    "from mapping_functions import find_indeces_vector\n",
+    "from constants import imin, imax, jmin, jmax, isize, jsize, \\\n",
+    "                      land_color, path_figure\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -51,7 +52,6 @@
     "results_folder = f'/data/brogalla/run_storage/Pb-reference-202312/Pb-reference-{year}-202312/'\n",
     "\n",
     "# colours:\n",
-    "land_color     = '#a9a7a2'\n",
     "profile_colors = ['#ff4949', '#01b9ff']"
    ]
   },
@@ -68,6 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ANHA12 grid mesh:\n",
     "mesh        = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mesh1.nc')\n",
     "mesh_hdept  = mesh['hdept'].values[0,imin:imax,jmin:jmax]\n",
     "mesh_hdepw  = mesh['hdepw'].values[0,imin:imax,jmin:jmax]\n",
@@ -81,8 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1        = f'ANHA12_EXH006_1m_{year}0101_{year}1231_comp_{year}09-{year}09.nc'\n",
-    "Pb_model     = xr.open_dataset(f'{results_folder}{file1}')\n",
+    "# load a results file to get the output grid\n",
+    "Pb_model     = xr.open_dataset(f'{results_folder}ANHA12_EXH006_1m_{year}0101_{year}1231_comp_{year}09-{year}09.nc')\n",
     "sub_lat      = Pb_model['nav_lat'].values\n",
     "sub_lon      = Pb_model['nav_lon'].values\n",
     "depths_model = Pb_model['deptht'].values"
@@ -101,7 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dissolved trace metal observations\n",
+    "# Dissolved Pb concentrations from observations from Colombo et al., 2019 \n",
+    "# (also part of the GEOTRACES intermediate data product, 2021)\n",
     "Pb_data = pd.read_csv('/ocean/brogalla/GEOTRACES/data/Pb-paper-data.csv')\n",
     "Pb_data = Pb_data.rename(columns={\"Depth.1\": \"Depth BB1\", \"Depth.2\": \"Depth BB2\", \"Depth.3\": \"Depth BB3\", \\\n",
     "                        \"Depth.4\": \"Depth CAA1\", \"Depth.5\": \"Depth CAA2\", \"Depth.6\": \"Depth CAA3\", \\\n",
@@ -128,6 +130,7 @@
    "outputs": [],
    "source": [
     "def haversine(lon1, lat1, lon2, lat2):\n",
+    "    # Calculate the distance in kilometers between two sets of latitude and longitude points\n",
     "    lon1, lat1, lon2, lat2 = map(np.radians, [lon1, lat1, lon2, lat2])\n",
     "    dlon = lon2 - lon1\n",
     "    dlat = lat2 - lat1\n",
@@ -174,7 +177,7 @@
    "outputs": [],
    "source": [
     "def land_patch(distances, coordi, coordj):\n",
-    "    \n",
+    "    # Function creates a pathc to mask land in the transects \n",
     "    topo = []\n",
     "    for d, distance in enumerate(distances[0:-1]):\n",
     "        rect = Rectangle((distance, mesh_hdepw[int(coordi[d]),int(coordj[d])]), np.abs(distances[d+1]-distance), 5000)\n",
@@ -207,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup observation transect:\n",
+    "# Setup a transect connecting the observations:\n",
     "transect_names = ['CB4','CB3', 'CB2', 'CB1', 'CAA8', 'CAA6', 'CAA7', '', 'CAA4', 'CAA5', 'CAA1', 'CAA2', 'CAA3', \\\n",
     "                 '', 'BB3', '', 'BB1']\n",
     "\n",
@@ -266,7 +269,7 @@
    "outputs": [],
    "source": [
     "# Find Pb model grid point coordinates associated with the array of points:\n",
-    "transect_i, transect_j = mf.find_indeces_vector(transect_vlons, transect_vlats, sub_lon, sub_lat)\n",
+    "transect_i, transect_j = find_indeces_vector(transect_vlons, transect_vlats, sub_lon, sub_lat)\n",
     "\n",
     "transect_model_distances = np.array([])\n",
     "transect_model_hdept     = np.array([])\n",
@@ -291,6 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# edit the names so that they are readable on the transect figure\n",
     "transect_names2       = np.copy(transect_names).astype('<U9')\n",
     "transect_names2[5:-3] = ''\n",
     "transect_names2[5]    = 'CAA4-7'\n",
@@ -351,8 +355,6 @@
     "xx, zz = np.meshgrid(transect_model_distances, mesh_gdepw)\n",
     "contour = ax.pcolormesh(xx, zz, plot_dPb, vmin=vminPb, vmax=vmaxPb, cmap=cmap1, zorder=2)\n",
     "ax.add_collection(main_patch)\n",
-    "# ax.pcolormesh(transect_model_dists, transect_model_depths, transect_dissolved_pb, \\\n",
-    "#               cmap=matplotlib.colors.ListedColormap([land_color]), alpha=1, zorder=2)\n",
     "\n",
     "ax.set_ylabel('Depth [m]', fontsize=6)\n",
     "ax.set_xlabel('Distance along transect [km]', fontsize=6)\n",
@@ -374,8 +376,6 @@
     "inset_ax.set_xlim([1450, 2000])\n",
     "contour1 = inset_ax.pcolormesh(xx, zz, plot_dPb, vmin=vminPb, vmax=10, cmap=cmap1, zorder=2)\n",
     "inset_ax.add_collection(inset_ax_patch)\n",
-    "# inset_ax.pcolormesh(transect_model_dists, transect_model_depths, transect_dissolved_pb, \\\n",
-    "#                     cmap=matplotlib.colors.ListedColormap([land_color]), alpha=1, zorder=2)\n",
     "inset_ax.tick_params(axis='both', which='major', labelsize=5)\n",
     "inset_ax.xaxis.set_major_locator(MultipleLocator(100))\n",
     "inset_ax.xaxis.set_minor_locator(MultipleLocator(50))\n",
@@ -393,8 +393,6 @@
     "inset_ax2.set_xlim([-10, 1450])\n",
     "contour2 = inset_ax2.pcolormesh(xx, zz, plot_dPb, vmin=vminPb, vmax=10, cmap=cmap1, zorder=2)\n",
     "inset_ax2.add_collection(inset_ax2_patch)\n",
-    "# inset_ax2.pcolormesh(transect_model_dists, transect_model_depths, transect_dissolved_pb, \\\n",
-    "#                      cmap=matplotlib.colors.ListedColormap([land_color]), alpha=1, zorder=2)\n",
     "inset_ax2.tick_params(axis='both', which='major', labelsize=5)\n",
     "inset_ax2.xaxis.set_major_locator(MultipleLocator(500))\n",
     "inset_ax2.xaxis.set_minor_locator(MultipleLocator(100))\n",
@@ -425,15 +423,8 @@
     "mark_inset(ax, inset_ax , loc1=2, loc2=1, fc=\"none\", ec='k', lw=0.6, linestyle='--', zorder=4);\n",
     "mark_inset(ax, inset_ax2, loc1=3, loc2=4, fc=\"none\", ec='k', lw=0.6, linestyle='--', zorder=4);\n",
     "\n",
-    "fig.savefig(f'{path_figure}R2-transect.jpg', bbox_inches='tight', dpi=300)"
+    "fig.savefig(f'{path_figure}R4-transect.jpg', bbox_inches='tight', dpi=300)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
