--- a/paper3/repo-paper-materials/S2-initial-conditions.ipynb
+++ b/paper3/repo-paper-materials/S2-initial-conditions.ipynb
@@ -22,27 +22,10 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.basemap import Basemap\n",
     "from matplotlib.colors import ListedColormap\n",
-    "from constants import imin, imax, jmin, jmax\n",
+    "from constants import imin, imax, jmin, jmax, path_figure, \\\n",
+    "                      land_color, land_edge\n",
     "\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# colors:\n",
-    "land_color         = '#a9a7a2'\n",
-    "land_outline_color = '#373736'"
    ]
   },
   {
@@ -54,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Modified ANHA12 mesh mask file (http://knossos.eas.ualberta.ca/anha/anhatable.php)\n",
+    "# Pb model configuration ANHA12 mask\n",
     "mesh         = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
     "mesh_lon     = mesh['nav_lon'].values\n",
     "mesh_lat     = mesh['nav_lat'].values\n",
@@ -69,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,17 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_layer(layer, axis):\n",
-    "    # layer --- depth level to plot\n",
-    "#     axis.set_facecolor(land_color)\n",
+    "    # plot the initial dissolved Pb concentrations for the specific depth layer on the axis\n",
     "    \n",
     "    # Map:\n",
     "    proj = Basemap(projection='eqdc',lat_0 = 75, lon_0 = -81, resolution='i', width=5.4e6, height=3.6e6, ax=axis)\n",
-    "    proj.drawcoastlines(color=land_outline_color, linewidth=0.6);\n",
+    "    proj.drawcoastlines(color=land_edge, linewidth=0.6);\n",
     "    proj.fillcontinents(color=land_color, lake_color=land_color, zorder=2);\n",
     "    \n",
     "    # Plot initial conditions and land mask:\n",
@@ -128,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
