--- a/paper3/repo-paper-materials/S3-monthly-boundary-condition-transects.ipynb
+++ b/paper3/repo-paper-materials/S3-monthly-boundary-condition-transects.ipynb
@@ -10,11 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import netCDF4 as nc\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
@@ -24,32 +23,12 @@
     "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
     "from matplotlib.patches import Rectangle\n",
     "from matplotlib.collections import PatchCollection\n",
-    "from constants import imin, imax, jmin, jmax, isize, jsize, rimwidthN, rimwidthS, rimwidthW, rimwidthE\n",
+    "from constants import imin, imax, jmin, jmax, isize, jsize, \\\n",
+    "                      rimwidthN, rimwidthS, rimwidthW, rimwidthE, \\\n",
+    "                      bdy_NCB, bdy_WCB, bdy_LS, bdy_HB, \\\n",
+    "                      path_figure, land_color\n",
     "\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Boundary coordinates: (i1,i2,j1,j2)\n",
-    "bdy_NCB = (1598,2177,778,798) # Northern Canada Basin \n",
-    "bdy_WCB = (2168,2178,390,797) # Western Canada Basin \n",
-    "bdy_LS  = (1140,1150,446,672) # Baffin Bay\n",
-    "bdy_HB  = (1190,1472,293,303) # Hudson Bay\n",
-    "\n",
-    "# Colors\n",
-    "land_color = '#a9a7a2'"
    ]
   },
   {
@@ -65,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Modified ANHA12 mesh mask file (http://knossos.eas.ualberta.ca/anha/anhatable.php)\n",
+    "# The Pb model configuration ANHA12 mask:\n",
     "mask         = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
     "mesh_lon     = mask['nav_lon'].values\n",
     "mesh_lat     = mask['nav_lat'].values\n",
@@ -81,6 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ANHA12 grid mesh:\n",
     "mesh        = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mesh1.nc')\n",
     "mesh_hdept  = mesh['hdept'].values[0,:,:]\n",
     "mesh_hdepw  = mesh['hdepw'].values[0,:,:]\n",
@@ -95,12 +75,11 @@
    "outputs": [],
    "source": [
     "# Boundary condition file for grid coordinates (created with notebook forcing/create-TS-based-BCs.ipynb)\n",
-    "# BC     = nc.Dataset('/ocean/brogalla/GEOTRACES/data/Pb_OBC_y2002m01.nc','r')\n",
-    "BC     = nc.Dataset('/ocean/brogalla/GEOTRACES/data/Pb-forcing-202311/bdy-reference/Pb_OBC_y2002m01.nc','r')\n",
-    "dPb_S  = np.array(BC.variables['dPb_S']).reshape(50,rimwidthS,bdy_LS[3]-bdy_LS[2])\n",
-    "dPb_N  = np.array(BC.variables['dPb_N']).reshape(50,rimwidthN,bdy_WCB[3]-bdy_WCB[2])\n",
-    "dPb_E  = np.array(BC.variables['dPb_E']).reshape(50,rimwidthE,bdy_NCB[1]-bdy_NCB[0])\n",
-    "dPb_W  = np.array(BC.variables['dPb_W']).reshape(50,rimwidthW,bdy_HB[1]-bdy_HB[0])\n",
+    "BC     = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/Pb-forcing-202311/bdy-reference/Pb_OBC_y2002m01.nc')\n",
+    "dPb_S  = BC.dPb_S.values.reshape(50,rimwidthS,bdy_LS[3]-bdy_LS[2])\n",
+    "dPb_N  = BC.dPb_N.values.reshape(50,rimwidthN,bdy_WCB[3]-bdy_WCB[2])\n",
+    "dPb_E  = BC.dPb_E.values.reshape(50,rimwidthE,bdy_NCB[1]-bdy_NCB[0])\n",
+    "dPb_W  = BC.dPb_W.values.reshape(50,rimwidthW,bdy_HB[1]-bdy_HB[0])\n",
     "\n",
     "# Labrador Sea\n",
     "dPb_S_lons = mesh_lon[bdy_LS[0]:bdy_LS[1],bdy_LS[2]:bdy_LS[3]] \n",
@@ -140,9 +119,10 @@
    "source": [
     "dPb_S_monthly = np.empty((12,50,10,226))\n",
     "\n",
+    "# Load dissolved Pb concentrations in the Labrador Sea boundary for each month in 2015:\n",
     "for month in range(1,13):\n",
-    "    BC     = nc.Dataset(f'/ocean/brogalla/GEOTRACES/data/Pb-forcing-202311/bdy-reference/Pb_OBC_y2015m{month:02}.nc','r')\n",
-    "    dPb_S_monthly[month-1,:,:,:] = np.array(BC.variables['dPb_S']).reshape(50,10,226)\n",
+    "    BC     = xr.open_dataset(f'/ocean/brogalla/GEOTRACES/data/Pb-forcing-202311/bdy-reference/Pb_OBC_y2015m{month:02}.nc')\n",
+    "    dPb_S_monthly[month-1,:,:,:] = BC.dPb_S.values.reshape(50,10,226)\n",
     "    BC.close()"
    ]
   },
@@ -185,6 +165,7 @@
    "outputs": [],
    "source": [
     "def get_boundary_depths(bdy_distance, bdy_ind, cell=0):\n",
+    "    # get the depths associated with the cells in the transect\n",
     "    \n",
     "    model_depths    = np.zeros((len(depths), len(bdy_distance)))\n",
     "    for n in range(0,len(bdy_distance)): \n",
@@ -208,6 +189,7 @@
    "outputs": [],
    "source": [
     "def plot_transect(ax, variable, vrange=(30,35), label='', cmap=cmocean.cm.deep, labelling=True, bdy_cell=0):\n",
+    "    # Function to visualize a variable at the Labrador Sea cross section on specified axis\n",
     "    \n",
     "    ax.invert_yaxis()\n",
     "    ax.set_ylim(3500, 0)\n",
@@ -229,7 +211,7 @@
    "outputs": [],
    "source": [
     "def land_patch(distances, coordi, coordj):\n",
-    "    \n",
+    "    # Function creates a patch to mask land in the transect plots\n",
     "    topo = []\n",
     "    for d, distance in enumerate(distances[0:-1]):\n",
     "        rect = Rectangle((distance, mesh_hdepw[coordi,coordj+d]), distances[d+1]-distance, 5000)\n",
@@ -254,18 +236,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bdy_cell = 5\n",
+    "bdy_cell = 5 # show slices from the middle of the boundary\n",
     "\n",
     "# Look at only one slice of the rimwidth thickness boundary:\n",
-    "S_distance  = calc_distance(dPb_S_lats[bdy_cell,:]   , dPb_S_lons[bdy_cell,:])    # Labrador Sea"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "S_distance  = calc_distance(dPb_S_lats[bdy_cell,:]   , dPb_S_lons[bdy_cell,:])    # Labrador Sea\n",
+    "\n",
     "S_model_depths = get_boundary_depths(S_distance, bdy_LS,  cell=bdy_cell)"
    ]
   },
@@ -278,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
