--- a/paper3/repo-paper-materials/S4-hudson-bay-boundary-sensitivity.ipynb
+++ b/paper3/repo-paper-materials/S4-hudson-bay-boundary-sensitivity.ipynb
@@ -20,7 +20,7 @@
     "import cmocean\n",
     "import pandas as pd\n",
     "import xarray as xr\n",
-    "from constants import imin, imax, jmin, jmax, isize, jsize\n",
+    "from constants import imin, imax, jmin, jmax, isize, jsize, path_figure\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,10 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pb model configuration ANHA12 mask\n",
     "mfile        = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
     "ANHA12_lon   = mfile['nav_lon'].values[imin:imax,jmin:jmax]\n",
     "ANHA12_lat   = mfile['nav_lat'].values[imin:imax,jmin:jmax]\n",
@@ -67,6 +68,7 @@
     "tmask        = mfile['tmask'].values\n",
     "tmask_sub    = mfile['tmask'].values[0,:,imin:imax,jmin:jmax]\n",
     "\n",
+    "# ANHA12 mesh grid\n",
     "mesh         = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mesh1.nc')\n",
     "mesh_bathy   = mesh['hdept'].values[0]\n",
     "e3t          = mesh['e3t_0'].values[0,:,imin:imax,jmin:jmax]\n",
@@ -76,10 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load monthly dissolved Pb concentrations for the reference and the Hudson Bay sensitivity experiment\n",
     "dissolpb1 = np.zeros((12,50,isize,jsize))\n",
     "dissolpb2 = np.zeros((12,50,isize,jsize))\n",
     "\n",
@@ -95,10 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# calculate the difference between the two experiments\n",
     "HB_diff = np.mean(dissolpb2-dissolpb1, axis=0)"
    ]
   },
@@ -111,11 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_grid_layers(variable, layers, vmin=0, vmax=1):\n",
+    "    # Function to plot the difference between the two experiments in 2D at a specified depth layer\n",
     "    cmap1 = cmocean.cm.rain\n",
     "    cmap1.set_bad(c_masked, 1)   \n",
     "    \n",
@@ -151,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
