--- a/paper3/repo-paper-materials/S5-Pb-blackcarbon-ratio.ipynb
+++ b/paper3/repo-paper-materials/S5-Pb-blackcarbon-ratio.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import xarray as xr\n",
-    "import netCDF4 as nc\n",
     "from matplotlib.dates import num2date\n",
     "import matplotlib.dates as mdates\n",
     "import datetime\n",
     "import calendar\n",
     "from scipy.optimize import leastsq\n",
     "from scipy.stats import pearsonr\n",
-    "from constants import imin, imax, jmin, jmax\n",
+    "from constants import imin, imax, jmin, jmax, path_figure\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +54,14 @@
     "color_BC      = '#c9c9c9'\n",
     "color_BC_line = '#a0a0a0'\n",
     "\n",
-    "# Modified ANHA12 mesh mask file (http://knossos.eas.ualberta.ca/anha/anhatable.php)\n",
-    "mesh         = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
-    "mesh_lon     = np.array(mesh.variables['nav_lon'])\n",
-    "mesh_lat     = np.array(mesh.variables['nav_lat'])\n",
-    "mesh_bathy   = np.array(mesh.variables['tmask'][0,:,:,:])\n",
+    "# Pb model configuration ANHA12 mask:\n",
+    "mesh         = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
+    "mesh_lon     = mesh.nav_lon.values\n",
+    "mesh_lat     = mesh.nav_lat.values\n",
+    "mesh_bathy   = mesh.tmask.values[0,:,:,:]\n",
     "bathy_masked = np.ma.masked_where((mesh_bathy> 0.1), mesh_bathy)\n",
     "ocean_masked = np.ma.masked_where((mesh_bathy<0.1), mesh_bathy)\n",
-    "depths       = np.array(mesh.variables['nav_lev'])"
+    "depths       = mesh.nav_lev.values"
    ]
   },
   {
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,29 +98,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def toTimestamp(d):\n",
+    "    # Function to convert a date to timestamp\n",
     "    return calendar.timegm(d.timetuple())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def lin_fit(x, y):\n",
-    "    '''Fits a linear fit of the form mx+b to the data'''\n",
+    "    # Fits a linear fit of the form mx+b to the data based on stackoverflow example\n",
     "    fitfunc = lambda params, x: params[0] * x  \n",
-    "    errfunc = lambda p, x, y: fitfunc(p, x) - y              #create error function for least squares fit\n",
+    "    errfunc = lambda p, x, y: fitfunc(p, x) - y  #create error function for least squares fit\n",
     "\n",
     "    init_a = 0.5                            #find initial value for a (gradient)\n",
     "    init_p = np.array((init_a))  #bundle initial values in initial parameters\n",
     "\n",
-    "    #calculate best fitting parameters (i.e. ) using the error function\n",
+    "    #calculate best fitting parameters using the error function\n",
     "    p1, success = leastsq(errfunc, init_p.copy(), args = (x, y))\n",
     "    f = fitfunc(p1, x)          #create a fit with those parameters\n",
     "    return p1, f  "
@@ -129,11 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def boxcar_filter_data(variable, sample_frequency='7d', window_len='5d'):\n",
+    "    # Boxcar filters observations based on stackoverflow example\n",
     "   \n",
     "    # Calculate boxcar window length:\n",
     "    if (window_len[-1] == 'd'):\n",
@@ -161,11 +162,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def resample_data(dates, variable, time_step='7d'):\n",
+    "    # Resample observations to regular time intervals\n",
     "    datetime_dates = [pd.to_datetime(date) for date in dates]\n",
     "        \n",
     "    # resample / interpolate data before applying filters so that they are evenly spaced to time_step size in days    \n",
@@ -192,11 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def match_dates(array1, array2, array1_dates, array2_dates):\n",
+    "    # Match Pb and EBC observations for similar dates to be able to correlate them\n",
     "    indx_array1 = np.array([])\n",
     "    indx_array2 = np.array([])\n",
     "\n",
@@ -233,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,37 +317,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.00787857] [126.92659615]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# No Filtering\n",
-    "# Linear fit:\n",
-    "p1_start_Alert, f_start_Alert = lin_fit(Alert_EBC_match, Alert_Pb_match)\n",
-    "print(p1_start_Alert, 1/p1_start_Alert) # Pb = ratio*BC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.01089848] [91.75595298]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Boxcar:\n",
     "Alert_Pb_boxcar_match, Alert_EBC_boxcar_match, \\\n",
@@ -352,32 +327,7 @@
     "                                                                           Alert_Pb_dates_gridded, Alert_EBC_dates_gridded)\n",
     "\n",
     "# Linear fit:\n",
-    "p1_boxcar_Alert, f_boxcar_Alert = lin_fit(Alert_EBC_boxcar_match, Alert_Pb_boxcar_match)\n",
-    "print(p1_boxcar_Alert, 1/p1_boxcar_Alert) # Pb = ratio*BC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correlation before any filtering is applied:\n",
-      "Pearson r: 0.54\n",
-      "Correlation after boxcar filtering:\n",
-      "Pearson r: 0.72\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Correlation before any filtering is applied:')\n",
-    "print(f'Pearson r: {pearsonr(Alert_EBC_match, Alert_Pb_match)[0]:.2f}')\n",
-    "\n",
-    "print('Correlation after boxcar filtering:')\n",
-    "print(f'Pearson r: {pearsonr(Alert_EBC_boxcar_match, Alert_Pb_boxcar_match)[0]:.2f}')"
+    "p1_boxcar_Alert, f_boxcar_Alert = lin_fit(Alert_EBC_boxcar_match, Alert_Pb_boxcar_match)"
    ]
   },
   {
