--- a/paper3/repo-paper-materials/S8-spin-up.ipynb
+++ b/paper3/repo-paper-materials/S8-spin-up.ipynb
@@ -17,11 +17,11 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import netCDF4 as nc\n",
+    "import xarray as xr\n",
     "import numpy as np\n",
     "import matplotlib\n",
     "from matplotlib.ticker import (MultipleLocator, AutoMinorLocator)\n",
-    "from constants import imin, imax, jmin, jmax, isize, jsize\n",
+    "from constants import imin, imax, jmin, jmax, isize, jsize, path_figure\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -43,7 +43,7 @@
     "year  = 2002\n",
     "month = 8\n",
     "\n",
-    "# indices of stations:\n",
+    "# indices of stations for comparison:\n",
     "stn_n = ['BB1', 'BB2', 'BB3', 'CAA1', 'CAA2', 'CAA3', 'CAA4', 'CAA5', 'CAA6', 'CAA7', 'CAA8', 'CAA9', \\\n",
     "          'CB1', 'CB2', 'CB3', 'CB4']\n",
     "stn_i = np.array([174, 337, 316, 444, 440, 431, 515, 515, 573, 554, 692, 582, 798, 848, 887, 969])\n",
@@ -70,22 +70,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask  = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mesh1.nc')\n",
-    "tmask = np.array(mask.variables['tmask'])[0,:,imin:imax,jmin:jmax]\n",
-    "\n",
-    "e3t        = np.array(mask.variables['e3t_0'])[0,:,imin:imax,jmin:jmax]\n",
+    "# ANHA12 mesh grid:\n",
+    "mask       = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mesh1.nc')\n",
+    "tmask      = mask.tmask.values[0,:,imin:imax,jmin:jmax]\n",
+    "e3t        = mask.e3t_0.values[0,:,imin:imax,jmin:jmax]\n",
     "e3t_masked = np.ma.masked_where((tmask[:,:,:] < 0.1), e3t)\n",
-    "hdept      = np.array(mask.variables['hdept'])[0,imin:imax,jmin:jmax]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ref   = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12-EXH006_y2015m01d05_gridT.nc',  'r')\n",
-    "depth = np.array(ref.variables['deptht'])"
+    "hdept      = mask.hdept.values[0,imin:imax,jmin:jmax]"
    ]
   },
   {
@@ -97,11 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_file_list(folder):\n",
+    "    # create a list of spin up run files to calculate the difference between\n",
     "    \n",
     "    end_yr0       = [f'{initial_conds}' for month in range(1,13)]\n",
     "    files_end_yr1 = [f'{folder}-spin0/ANHA12_EXH006_1m_20020101_20021231_comp_2002{month:02}-2002{month:02}.nc' for month in range(1,13)]\n",
@@ -122,28 +113,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_file(filename):\n",
+    "    # Load dissolved Pb concentrations from the supplied filename\n",
     "    \n",
-    "    pb_file    = nc.Dataset(f'{filename}')\n",
+    "    pb_file    = xr.open_dataset(f'{filename}')\n",
     "    try:\n",
-    "        pb_monthly = np.array(pb_file.variables['dissolpb'])[0,:,:,:]\n",
+    "        pb_monthly = pb_file['dissolpb'].values[0,:,:,:]\n",
     "    except:\n",
-    "        pb_monthly = np.array(pb_file.variables['dPb'])[0,:,imin:imax,jmin:jmax]\n",
+    "        pb_monthly = pb_file['dPb'].values[0,:,imin:imax,jmin:jmax]\n",
     "    \n",
     "    return pb_monthly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_monthly_difference(file_list):\n",
+    "    # Calculate the difference between the dissolved Pb in the current month and the previous month\n",
     "    pb_monthly = np.zeros((len(file_list),50,isize,jsize))\n",
     "    difference = np.zeros((len(file_list)-12,len(stn_i)))\n",
     "\n",
@@ -172,20 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create lists of the files to load\n",
     "LS_files  = create_file_list('/data/brogalla/run_storage/Pb-Labrador-202312/Pb-Labrador-202312-IC')\n",
     "ref_files = create_file_list('/data/brogalla/run_storage/Pb-reference-202312/Pb-reference-202312-IC')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# calculate the month-to-month change\n",
     "diff_ref = calculate_monthly_difference(ref_files)\n",
     "diff_LS  = calculate_monthly_difference(LS_files)"
    ]
@@ -199,17 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# visualize the month-to-month change in concentration at profile locations\n",
     "def plot_spinup_change(ax, difference, file_list, legend=False):\n",
     "\n",
     "    months = range(1, len(file_list)+1-12)\n",
     "    \n",
     "    for stn, stn_name in enumerate(stn_n):\n",
     "        ax.plot(months, difference[:,stn]*1e12, '-', c=colors[stn], label=stn_name, linewidth=1.5)\n",
-    "#         ax.plot(months, difference[:,stn]*1e12, '.', c=colors[stn], markersize=6, markeredgecolor='k', markeredgewidth=0.5)\n",
     "\n",
     "    ax.tick_params(axis='both', which='major', labelsize=7)\n",
     "\n",
@@ -228,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
