--- a/paper3/repo-paper-materials/S9-region-definitions.ipynb
+++ b/paper3/repo-paper-materials/S9-region-definitions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -25,7 +25,7 @@
     "from constants import imin, imax, jmin, jmax, isize, jsize, \\\n",
     "                      rimwidthN, rimwidthS, rimwidthW, rimwidthE, \\\n",
     "                      bdy_NCB, bdy_WCB, bdy_LS, bdy_HB, \\\n",
-    "                      land_colord, path_figure\n",
+    "                      land_color, path_figure\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -45,7 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "# Modified ANHA12 mesh mask file (http://knossos.eas.ualberta.ca/anha/anhatable.php)\n",
+    "# Pb model configuration ANHA12 mask\n",
     "mfile        = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
     "mesh_lon     = mfile['nav_lon'].values\n",
     "mesh_lat     = mfile['nav_lat'].values\n",
@@ -62,7 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "# General file:\n",
+    "# ANHA12 general mesh\n",
     "mesh  = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mesh1.nc')\n",
     "hdept = mesh['hdept'].values[0,:,:]"
    ]
@@ -89,7 +89,7 @@
    },
    "outputs": [],
    "source": [
-    "# Average basin profiles for different regions \n",
+    "# Average basin profiles for different regions, so create masks for the different regions\n",
     "# --- Canada Basin ---\n",
     "CB_mask  = np.zeros(bathy_masked.shape)\n",
     "CB_mask[:,imin+10:imax-10,jmin+10:jmax-20] = 1 # excluding the regions of boundary conditions\n",
@@ -189,6 +189,13 @@
     "\n",
     "fig.savefig(f'{path_figure}S9.jpg', bbox_inches='tight', dpi=300)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
