--- a/paper3/repo-paper-materials/S6-sediment-resuspension.ipynb
+++ b/paper3/repo-paper-materials/S6-sediment-resuspension.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "import pickle\n",
     "import xarray as xr\n",
     "from matplotlib.colors import ListedColormap\n",
-    "from constants import imin, imax, jmin, jmax\n",
+    "from constants import imin, imax, jmin, jmax, path_figure, land_color\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,10 +43,7 @@
     "vals_cont[:, 0] = np.linspace(117/N, 1, N)\n",
     "vals_cont[:, 1] = np.linspace(82/N, 1, N)\n",
     "vals_cont[:, 2] = np.linspace(60/N, 1, N)\n",
-    "sed_cmap = ListedColormap(vals_cont).reversed()\n",
-    "\n",
-    "# Colors\n",
-    "land_color = '#a9a7a2'"
+    "sed_cmap = ListedColormap(vals_cont).reversed()"
    ]
   },
   {
@@ -58,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Modified ANHA12 mesh mask file (http://knossos.eas.ualberta.ca/anha/anhatable.php)\n",
+    "# Pb model configuration ANHA12 mask\n",
     "mesh         = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
     "mesh_lon     = mesh['nav_lon'].values\n",
     "mesh_lat     = mesh['nav_lat'].values\n",
@@ -73,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
