--- a/paper3/repo-paper-materials/S7-sediment-in-ice.ipynb
+++ b/paper3/repo-paper-materials/S7-sediment-in-ice.ipynb
@@ -20,7 +20,7 @@
     "import pickle\n",
     "import xarray as xr\n",
     "from matplotlib.colors import ListedColormap\n",
-    "from constants import imin, imax, jmin, jmax\n",
+    "from constants import imin, imax, jmin, jmax, land_color, path_figure\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -44,10 +44,7 @@
     "vals_cont[:, 0] = np.linspace(117/N, 1, N)\n",
     "vals_cont[:, 1] = np.linspace(82/N, 1, N)\n",
     "vals_cont[:, 2] = np.linspace(60/N, 1, N)\n",
-    "sed_cmap = ListedColormap(vals_cont).reversed()\n",
-    "\n",
-    "# Colors\n",
-    "land_color = '#a9a7a2'"
+    "sed_cmap = ListedColormap(vals_cont).reversed()"
    ]
   },
   {
@@ -63,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Modified ANHA12 mesh mask file (http://knossos.eas.ualberta.ca/anha/anhatable.php)\n",
+    "# Pb model configuration ANHA12 mask\n",
     "mesh         = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
     "mesh_lon     = mesh['nav_lon'].values\n",
     "mesh_lat     = mesh['nav_lat'].values\n",
